Added contact section to CV

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Online CV</title>
     <link rel="stylesheet" href="style.css" />
-
   </head>
   <body>
     <header>
@@ -16,10 +15,18 @@
     <section>
       <h2>About Me</h2>
       <p>
-        Hello! My name is Sibongiseni Brandon Khumalo. I am a motivated and enthusiastic aspiring Full Stack Web Developer and Software Engineer with a strong passion for technology and a commitment to continuous learning. Eager to apply coding skills in real-world projects, with a focus on creating efficient, scalable, and user-friendly applications. Skilled in both front-end and back-end development, with a solid understanding of programming languages, frameworks, and development tools. A quick learner with a positive attitude, strong problem-solving abilities, and a keen eye for detail.
+        Hello! My name is Sibongiseni Brandon Khumalo. I am a motivated and
+        enthusiastic aspiring Full Stack Web Developer and Software Engineer
+        with a strong passion for technology and a commitment to continuous
+        learning. Eager to apply coding skills in real-world projects, with a
+        focus on creating efficient, scalable, and user-friendly applications.
+        Skilled in both front-end and back-end development, with a solid
+        understanding of programming languages, frameworks, and development
+        tools. A quick learner with a positive attitude, strong problem-solving
+        abilities, and a keen eye for detail.
       </p>
     </section>
-     <!-- Updated contact information -->
+    <!-- Updated contact information -->
     <section>
       <h2>Contact Information</h2>
       <ul>
@@ -41,14 +48,16 @@
           <a href="https://github.com/sbongiseniKhuamlo" target="_blank"
             >GitHub Profile</a
           >
-        </li><!-- Added my GitHub link -->
+        </li>
+        <!-- Added my GitHub link -->
       </ul>
     </section>
     <!-- Updated skills -->
     <section id="skills">
       <h2>Skills</h2>
       <ul>
-        <li>HTML & CSS</li><!-- Fixed naming -->
+        <li>HTML & CSS</li>
+        <!-- Fixed naming -->
         <li>Python</li>
         <li>JavaScript</li>
         <!-- Fixed spacing and naming -->
