Improved readability of HTML and CSS code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Online CV</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   </head>
   <body>
     <header>
@@ -55,16 +58,14 @@
     <!-- Updated skills -->
     <section id="skills">
       <h2>Skills</h2>
-      <ul>
-        <li>HTML & CSS</li>
-        <!-- Fixed naming -->
-        <li>Python</li>
-        <li>JavaScript</li>
-        <!-- Fixed spacing and naming -->
-        <li>Problem-Solving</li>
-      </ul>
+      <div class="skills-grid">
+        <div class="skill-item"><i class="fab fa-html5"></i> HTML & CSS</div>
+        <div class="skill-item"><i class="fab fa-js-square"></i> JavaScript</div>
+        <div class="skill-item"><i class="fab fa-python"></i> Python</div>
+        <div class="skill-item"><i class="fas fa-brain"></i> Problem-Solving</div>
+      </div>
     </section>
-
+    
     <section>
       <h2>Education</h2>
       <p>Full Stack Web Development and Software Engineering - HyperioneDev</p>
