--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <header>
       <h1>Sibongiseni Brandon Khumalo</h1>
-      <p>Software Engineering Student | Aspiring Professional</p>
+      <p>Aspiring Full Stack Developer | HyperionDev Bootcamp Graduate | Building Web Apps with React & Node.js</p>
     </header>
 
     <section>
-      <h2>About Me</h2>
+      <h2>Professional Summary</h2>
       <p>
         Hello! My name is Sibongiseni Brandon Khumalo. I am a motivated and
         enthusiastic aspiring Full Stack Web Developer and Software Engineer
@@ -27,6 +27,9 @@
         understanding of programming languages, frameworks, and development
         tools. A quick learner with a positive attitude, strong problem-solving
         abilities, and a keen eye for detail.
+      </p>
+    </section>
+    
       </p>
     </section>
     <!-- Updated contact information -->
